Fix project image title position on mobile deviecs v2

--- a/code/styles.css
+++ b/code/styles.css
@@ -323,9 +323,10 @@ main {
   font-weight: 500;
   font-size: 24px;
   z-index: 2;
-  position: absolute;
+  position: relative;
   text-transform: uppercase;
   letter-spacing: 1px;
+  margin: 0;
 }
 
 /* .project-image-container {
